--- a/mocose_demo.ipynb
+++ b/mocose_demo.ipynb
@@ -307,7 +307,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = MoCoSEModel.from_pretrained('F:\\\\trained_model\\\\77.27')"
+    "model = MoCoSEModel.from_pretrained('mocose-bert-base-uncased')"
    ]
   },
   {
@@ -424,7 +424,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = MoCoSEModel.from_pretrained('F:\\\\trained_model\\\\77.27')"
+    "model = MoCoSEModel.from_pretrained('mocose-bert-base-uncased')"
    ]
   },
   {
